codebase/homepage/homepage-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
    service: homepage
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  selector:
    app: homepage      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage-sa
      containers:
        - name: homepage
          image: homepage:0.1.0
          command:
            ["python3", "-m", "flask", "run", "--host=0.0.0.0", "--port=8080"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      #   volumeMounts:
      #   - name: app-volume
      #     mountPath: /app
      #     subPath: flask-app
      # volumes:
      # - name: app-volume
      #   persistentVolumeClaim:
      #     claimName: local-pvc
