codebase/homepage/homepage-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homepage
spec:
  hosts:
  - "*"
  gateways:
  - homepage-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: homepage
        port:
          number: 80
